// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render SkillSection with title 1`] = `
<article
  className="skillSection"
>
  <h2
    className="skillSection__title"
  >
    Title!
  </h2>
  <ul
    className="skillSection__list"
  />
</article>
`;

exports[`Render SkillSection with title and skills 1`] = `
<article
  className="skillSection"
>
  <h2
    className="skillSection__title"
  >
    Title!
  </h2>
  <ul
    className="skillSection__list"
  >
    <li
      key="Skill1"
    >
      Skill1
    </li>
    <li
      key="Skill2"
    >
      Skill2
    </li>
    <li
      key="Skill3"
    >
      Skill3
    </li>
  </ul>
</article>
`;

exports[`Render SkillSection without props 1`] = `
<article
  className="skillSection"
>
  <h2
    className="skillSection__title"
  />
  <ul
    className="skillSection__list"
  />
</article>
`;
